--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,10 @@
     "default_popup": "popup.html",
     "default_title": "My custom google Chrome extension"
   },
+  "icons": {
+    "16": "icon-16.png",
+    "48": "icon-48.png",
+    "128": "icon-128.png"
+  },
   "permissions": ["activeTab"]
 }
